HV-1635 Remove specific instructions for building with JDK 9 from the README